--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,17 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body class="mat-typography">
+<body><br><br>
+  <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light border border-secondary rounded-bottom">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">
+          <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+          Pedra Tesoura Papel.
+        </a>
+      </div>
+    </div>
+  </nav> -->
   <my-app></my-app>
 </body>
 </html>
